# LocoSync

./: CMakeLists.txt  README.en.md  README.md
examples/: list_pokemons.cpp
include/locosync/: client.hpp  interceptor.hpp  locosync.hpp  request.hpp  response.hpp
src/: client.cpp  utils.cpp
